# pytarchive

./: .pre-commit-config.yaml  README.md  pyproject.toml  read_db.py  test_progress.py
config/: logging.conf  pyarchive.conf  pytarchive.conf
pyarchive/client/: pyarchive.py
pyarchive/service/: command_runner.py  config.py  db.py  handlers.py  library.py  log.py  ordered_copy.py  service.py  tasks.py  utils.py  work_queue.py
pytarchive/client/: pytarchive.py
pytarchive/service/: command_runner.py  config.py  db.py  handlers.py  is_dir.py  library.py  log.py  ordered_copy.py  service.py  tasks.py  utils.py  work_queue.py
tests/: conftest.py  test_json_database.py  test_library.py
